--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -8,7 +8,8 @@ security:
         app_user_provider:
             entity:
                 class: App\Entity\Participant
-                property: mail
+                #désactivation de property mail pour répondre au cahier des charges login via mail ou pseudo
+                # property: mail
 
     firewalls:
         dev:
