--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -28,6 +28,8 @@ security:
             remember_me:
                 secret: '%kernel.secret%'
                 lifetime: 604800
+                path: /
+                always_remember_me: false
 
             logout:
                 path: app_deconnexion
