Ajustements connexion : maintenant plus clair qu'un user inactif ne peux pas se connecter. Ajustements annulation : modal d'annulation pour enregistrer un message qui sera display dans les détails de la sortie Modification de l'entité Sortie pour pouvoir stocker le message d'annulation🦖

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,6 +17,7 @@ security:
             pattern: ^/(_profiler|_wdt|assets|build)/
             security: false
         main:
+            user_checker: App\Security\UserChecker
             lazy: true
             provider: app_user_provider
             form_login:
